--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111789205-1"></script>
   <meta name="viewport" content="width=470, maximum-scale=1, user-scalable=yes,">
@@ -11,16 +10,12 @@
   <script src="app.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-
-
-
-
 </head>
-
 <body>
   <ul id="slide-out" class="side-nav" >
     <li>
       <div class="userView">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="background">
           <img src="images/rubyaaaa.png">
         </div>
@@ -42,7 +37,7 @@
                   <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'React.JS')">React.JS</a></li>
                   <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'RubyonRails')">Ruby on Rails</a></li>
                   <li><a href="javascript:void(0)" class="animated slideInLeft" class="tablinks" onclick="openCity(event, 'Angular.JS')">Angular.Js</a></li>
-                  <li> <a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'javascripthtml5css3')">javascript/HTML5/CSS3</a></li>
+                  <li><a href="javascript:void(0)" class="animated slideInRight" class="tablinks" onclick="openCity(event, 'javascripthtml5css3')">javascript/HTML5/CSS3</a></li>
                 </ul>
               </div>
             </li>
@@ -163,7 +158,7 @@
 <a><img class="git" src="images/AN.png"></a>
 <a><img class="git" src="images/mean-stack.png"></a>
 <a><img class="git" src="images/58480873cef1014c0b5e48ea.png"></a>
- <a><img class="git" src="images/AJAX_logo_by_gengns.svg.png"></a>
+<a><img class="git" src="images/AJAX_logo_by_gengns.svg.png"></a>
 <a><img class="git" src="images/55124.png"></a>
 <a><img class="git" src="images/api-icon.png"></a>
 <a><img class="git" src="images/ws_logo.png"></a>
@@ -271,6 +266,7 @@ $( document ).ready(function() {
   // Hide sideNav
   $('.button-collapse').sideNav('hide');
   // Destroy sideNav
+
 
   });
 
